
Changelog Bypass Paywalls Clean - Chrome

Post-release
Add Monocle (UK)
Add Stylist.co.uk
Fix Advance Local (no amp)

* v3.1.7.3 (2023-05-08)
Remove Medienhaus Aachen (fix obsolete)
Fix BusinessPost.ie (link to archive.is)
Maintenance contentScript (sanitize html-input)

* v3.1.7.0 (2023-05-07)
Add Cairns Post, Geelong Advertiser & Townsville Bulletin (Australia News Corp)
Add Arizent sites (opt-in to custom sites)
Remove Puck.news (fix obsolete)
Fix Adweek (premium)
Fix ilMessaggero.it (+ regional sites)
Fix Mediahuis Noord (json)
Fix Modern Healthcare (sponsored)
Fix Sportico (amp)
Update custom (flex) sites (no fix group)
Update custom sites (load text from json_next)

* v3.1.6.0 (2023-04-30)
Remove Zeit.de (fix obsolete)
Fix Bloomberg (Live TV limit)
Fix Gannett Group (redirect restricted)
Fix La Vanguardia (xhr)
Fix Mediahuis Noord (refresh)
Fix Roularta Media Group (Firefox-sync)

* v3.1.5.0 (2023-04-23)
Add Cox First Media (opt-in to custom sites)
Remove NK News (fix obsolete)
Fix ESPN USA
Fix Groupe IPM
Fix NYTimes (interactive/games)
Fix StuDocu (banner)

* v3.1.4.1 (2023-04-17)
Add El Observador, El Pais & La Diaria (Uruguay)
Add Jacobin.de
Add ProMedia.nl Group (opt-in to custom sites)
Add Substack (link to Google Search Tool; opt-in to custom sites for custom domains)
Fix Berlingske.dk
Fix NYTimes (Googlebot)
Fix Tagesspiegel.de (background; link to Google Search Tool)
Update block general paywall script (Ippen.space)
Update popup (12ft.io)

* v3.1.3.0 (2023-04-10)
Add Haas Mediengruppe (opt-in to custom sites)
Remove Griffith Review (fix obsolete)
Fix Gannett Group (identify sites)
Fix LesEchos.fr (json)
Fix Nautil.us (cookies)
Fix The West Australian (json)

* v3.1.2.0 (2023-04-02)
Add Epicurious (Conde Nast)
Add LeGrandContinent.eu
Add Schwaebische.de
Add TagesAnzeiger.ch (link to archive.is)
Remove Business Standard (fix obsolete)
Fix BusinessPost.ie (json)
Fix Citywire
Fix DHnet.be, L'Avenir & LaLibre.be (Add Groupe IPM)