@@ -755,6 +755,7 @@ Grouped in options:\
 [Aftonbladet](https://www.aftonbladet.se) -
 [Dagens ETC](https://www.etc.se) -
 [Dagens Industri](https://www.di.se) -
+[Dagens Nyheter (link to archive.is)](https://www.dn.se) -
 [NyTeknik](https://www.nyteknik.se)
 
 ##### Switzerland
