@@ -175,6 +175,7 @@
     "*://*.digiday.com/*",
     "*://*.discovermagazine.com/*",
     "*://*.dn.no/*",
+    "*://*.dn.se/*",
     "*://*.dna.fr/*",
     "*://*.dvhn.nl/*",
     "*://*.eastbaytimes.com/*",
